--- a/style.css
+++ b/style.css
@@ -435,14 +435,14 @@ body .fl-post-grid-text a.fl-post-grid-more {
 -------------------------------------------------------------- */
 
 .page .fl-post-header {
-    margin: 30px 0 80px;
+    margin: 30px 0;
 }
 .page .fl-post-title {
     text-align: center;
     font-size: 45px;
 }
 .fl-about-headshot {
-    margin: 0 40px 0 0;
+    margin: -15px 25px 0 0;
 }
 
 
