--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ a:active,
 a:visited,
 a:hover {
     color: #7a9661;
-    text-decoration: none !important;
+    text-decoration: none;
     transition: all 0.2s;
 }
 a:hover {
@@ -90,19 +90,19 @@ h6 {
     margin: 1.4em 0;
 }
 h1 {
-    font-size: 3.3rem;
+    font-size: 3rem;
 }
 h2 {
-    font-size: 1.9rem;
+    font-size: 2rem;
 }
 h3 {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
 }
 h4 {
     font-size: 1.1rem;;
 }
 p {
-    margin: 0 0 30px;
+    margin: 0 0 25px;
 }
 mark {
     background: transparent !important;
@@ -123,6 +123,24 @@ label {
     text-transform: uppercase;
     font-style: italic;
 }
+input[type=submit] {
+    background: #14414f;
+    border: 0;
+    color: #BFD3DA;
+    font-family: 'brandon-grotesque', sans-serif;
+    font-size: 18px;
+    font-style: italic;
+    padding: 17px 33px;
+    margin-bottom: 25px;
+    text-transform: uppercase;
+    transition: 0.3s background;
+}
+input[type=submit]:hover,
+input[type=submit]:focus,
+input[type=submit]:active {
+    background: #12323E;
+    border: 0;
+}
 
 /*Containers*/
 
@@ -139,8 +157,8 @@ body,
 }
 .fl-content {
     background: #EFECEC;
-    padding: 3.1rem;
-    margin-top: 4.2rem;
+    padding: 3.1rem 3.1rem 1rem;
+    margin: 4.2rem 0;
 
     border-radius: 2px;
     box-shadow: 0 1px 8px rgba(60,72,89,0.1);
@@ -164,6 +182,7 @@ body,
     font-family: "ff-tisa-web-pro", serif;
     font-size: 20px;
     text-decoration: none;
+    padding: 0.8rem 1.3rem;
 }
 .fl-page-header a:hover,
 .fl-page-header a:hover * {
@@ -286,7 +305,7 @@ body .fl-post-grid-text a.fl-post-grid-more {
     margin: 15px 50px 0 50px;;
     text-align: center;
 
-    text-shadow: -2px 2px 6px rgba(0,0,0,0.5);
+    text-shadow: -2px 4px 6px rgba(0,0,0,0.5);
 }
 .archive .fl-post-content p:first-child,
 .single-post .fl-post-content p:first-child {
@@ -310,9 +329,9 @@ body .fl-post-grid-text a.fl-post-grid-more {
     margin: 1.2rem auto;
 }
 .wp-caption p.wp-caption-text {
-    color: #6F6F6F;
+    color: #666869;
     font-style: italic;
-    font-size: 16px;
+    font-size: 17px;
     line-height: inherit;
 }
 .fl-post img.aligncenter {
@@ -325,21 +344,71 @@ body .fl-post-grid-text a.fl-post-grid-more {
 /*Meta*/
 
 .fl-post-meta-top {
-    color: #848C8E;
-    font-size: 21px;
+    color: #D9DDDE;
+    font-size: 1.2rem;
     margin-top: 10px;
 }
-.fl-post-meta-bottom {
-    font-size: 16px;
+.fl-post-meta-bottom,
+.fl-post-meta-bottom a {
+    font-style: italic;
+    color: #666869;
+}
+.fl-post-meta-bottom a {
+    text-decoration: underline;
 }
 .fl-post-meta-bottom {
+    font-size: 17px;
+    padding: 10px 0 20px;
     border-top: 1px solid #D0D0D0;
-    padding: 15px 0 20px;
-    margin-top: 20px;
+    margin: 10px 0 20px;;
 }
 .single .fl-post-meta a {
     text-decoration: underline;
 }
+
+/*Sharing Buttons*/
+.et_social_inline:before {
+    content: "Impress your friends and colleagues by giving this a share. It's much appreciated...";
+    color: #666869;
+    display: inline-block;
+    font-style: italic;
+    font-size: 17px;
+    margin-bottom: 15px;
+}
+
+/*Subscribe */
+
+.jetpack_subscription_widget {
+    background: #184150;
+    color: #D2CDCD;
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 45px;
+    padding: 10px 10px 15px;
+    border-radius: 3px;
+}
+.jetpack_subscription_widget p {
+    margin-bottom: 20px;
+}
+.jetpack_subscription_widget h2 {
+    color: #fff;
+    font-size: 1.9rem;
+    margin: 1.2rem 0 0.3rem;
+}
+.jetpack_subscription_widget #subscribe-text {
+    font-style: italic;
+}
+.jetpack_subscription_widget input[type=email] {
+    max-width: 73%;
+    margin: auto;
+}
+.jetpack_subscription_widget input[type=submit] {
+    color: #184150;
+    background: #9abda3;
+    margin: 5px 0 0;
+    min-width: 30%;
+}
+
 
 /*Comments*/
 
@@ -415,31 +484,17 @@ body .fl-post-grid-text a.fl-post-grid-more {
 .fl-comment-form label {
     color: #4B5F65;
 }
-.fl-comment-form input[type=submit] {
-    background: #14414f;
-    border: 0;
-    color: #BFD3DA;
-    font-family: 'brandon-grotesque', sans-serif;
-    font-size: 18px;
-    font-style: italic;
-    padding: 17px 33px;
-    text-transform: uppercase;
-    transition: 0.3s background;
-}
-.fl-comment-form input[type=submit]:hover {
-    background: #12323E;
-}
 
 
 /*  Pages
 -------------------------------------------------------------- */
 
 .page .fl-post-header {
-    margin: 30px 0;
+    margin: 10px 0 70px;
 }
 .page .fl-post-title {
     text-align: center;
-    font-size: 45px;
+    font-size: 43px;
 }
 .fl-about-headshot {
     margin: -15px 25px 0 0;
@@ -463,6 +518,10 @@ body .fl-post-grid-text a.fl-post-grid-more {
     font-size: 15px;
     font-style: italic;
 }
+.fl-copyright a {
+    color: #8c8d8e;
+    text-decoration: underline;
+}
 
 
 /*  Media Queries
@@ -483,7 +542,7 @@ body .fl-post-grid-text a.fl-post-grid-more {
         padding-bottom: 0;
     }
     .fl-page-nav-col {
-        margin-bottom: 15px;
+        margin: 1rem 0 1rem;
     }
 }
 
@@ -502,15 +561,39 @@ body .fl-post-grid-text a.fl-post-grid-more {
         border: 0;
         text-align: center;
     }
+    .fl-page-nav-col {
+        margin: 1rem 0 0;
+    }
+    .fl-page-nav-right .fl-page-nav-wrap .navbar-nav > li > a {
+        padding: 0.6rem 0;
+    }
     .fl-content {
-        margin: 1.3rem;
+        margin: 1.3rem 1.3rem .8rem;
     }
     .archive .fl-post-header, .single-post .fl-post-header {
         height: 200px
     }
 }
 @media (max-width: 515px) {
-    h1 {
-        font-size: 2.3rem;
+    html {
+        font-size: 8px;
     }
+    body {
+        font-size: 18px;
+    }
+    p {
+        margin-bottom: 18px;
+    }
+    .fl-logo-text {
+        font-size: 21px;
+    }
+    .fl-subheader-text {
+        font-size: 15px;
+    }
+    .fl-content {
+        margin: 1.1rem 0.4rem 1.1rem;
+        padding: 1.9rem;
+    }
+    h2 { font-size: 2.8rem; }
+    h3 { font-size: 2.5rem; }
 }
